# awin

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: market_style_baskets.json  market_style_baskets.v1.yaml  market_style_baskets.yaml  opportunity_rules.json  opportunity_rules.v1.yaml  opportunity_rules.yaml  project.yaml  risk_rules.json  risk_rules.v1.yaml  risk_rules.yaml  style_profile_rules.json  style_profile_rules.v1.yaml  style_profile_rules.yaml  ths_concept_overlay.json  ths_concept_overlay.v1.yaml  ths_concept_overlay.yaml
docs/: README.md  architecture.md  manual.md  modules.md  overview.md
docs/architecture/: data-dictionary.md  style-definition-field-mapping.md
docs/tracking/: action-list.md  implementation-plan.md  (+4 more)
scripts/: README.md  check_intraday_sources.py  check_runtime.py  compare_runtime_vs_raw.py  compare_v1_v2_snapshot.py  debug_catchup.py  debug_risk.py  debug_theme_flow.py  evaluate_day.py  profile_m0_runtime.py  raw_market_judgement.py  replay_day.py  replay_intraday.py  run_cycle.py  run_once.py  smoke_sources.py
tests/: test_adapters_contracts.py  test_alert_diff.py  test_config_runtime.py  test_evaluation_day_summary.py  test_evaluation_outcomes.py  test_evaluation_parity.py  test_fund_flow_profile.py  test_m0_contracts.py  test_market_understanding.py  test_opportunity_discovery.py  test_persist_bundle.py  test_replay_day.py  test_reporting_summary.py  test_risk_surveillance.py  test_run_cycle.py  test_schema.py  test_state_history.py  test_stock_facts.py  test_style_profile.py  test_theme_evidence_primary.py
(+78 files in other folders)
