[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "awin"
version = "0.1.0"
description = "A-share investment insight platform MVP scaffold"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2,<4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
